fix(header): add overflow for icon overflowing on warning, add animation to open menu

--- a/src/components/Layout/Header.module.scss
+++ b/src/components/Layout/Header.module.scss
@@ -6,6 +6,7 @@
   justify-content: space-between;
   padding: 18px var(--main-padding-sm);
   padding-left: 10px;
+  overflow-y: hidden;
 
   @media (max-width: $breakpoint-md) {
     padding-left: 0;
