--- a/src/components/Navigation/DropdownList.module.scss
+++ b/src/components/Navigation/DropdownList.module.scss
@@ -5,4 +5,5 @@
   padding: 0;
   flex-direction: row;
   justify-content: space-between;
+  cursor: pointer;
 }
